# CS1410-inheritance

./: CMakeLists.txt  Counter.cpp  Counter.h  Distance.cpp  Distance.h  Employee.cpp  Employee.h  Laborer.cpp  Laborer.h  Manager.cpp  Manager.h  README.md  Scientist.cpp  Scientist.h  Student.cpp  Student.h  diamond.cpp  main.cpp  testDistance.cpp  testEmployee.cpp  testMultiInheritance.cpp
